--- a/01introTF.ipynb
+++ b/01introTF.ipynb
@@ -44,11 +44,8 @@
       "source": [
         "## Imports\n",
         "\n",
-        "Let's start with the imports. Here, you are importing [TensorFlow](https://www.tensorflow.org/) and calling it `tf` for convention and ease of use.\n",
-        "\n",
-        "You then import a library called [`numpy`](https://numpy.org) which helps to represent data as arrays easily and to optimize numerical operations.\n",
-        "\n",
-        "The framework you will use to build a neural network as a sequence of layers is called [`keras`](https://keras.io/) so you will import that too.\n"
+        "We need [TensorFlow](https://www.tensorflow.org/),  [`numpy`](https://numpy.org) and [`keras`](https://keras.io/).   \n",
+        "KERAS is a framework to build a neural network as a sequence of layers.\n"
       ]
     },
     {
@@ -61,10 +58,19 @@
       "source": [
         "import tensorflow as tf\n",
         "import numpy as np\n",
-        "from tensorflow import keras\n",
-        "\n",
-        "print(tf.__version__)"
+        "from tensorflow import keras"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(tf.__version__)"
+      ],
+      "metadata": {
+        "id": "VXBAi8vLyw3o"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -72,9 +78,9 @@
         "id": "wwJGmDrQ0EoB"
       },
       "source": [
-        "## Define and Compile the Neural Network\n",
+        "## Define a Neural Network and Compile\n",
         "\n",
-        "Next, you will create the simplest possible neural network. It has 1 layer with 1 neuron, and the input shape to it is just 1 value. You will build this model using Keras' [Sequential](https://keras.io/api/models/sequential/) class which allows you to define the network as a sequence of [layers](https://keras.io/api/layers/). You can use a single [Dense](https://keras.io/api/layers/core_layers/dense/) layer to build this simple network as shown below."
+        "The simplest possible neural network has 1 layer with 1 neuron, and the input shape to it is just 1 value. You will build this model using Keras' [Sequential](https://keras.io/api/models/sequential/) class which allows you to define the network as a sequence of [layers](https://keras.io/api/layers/). You can use a single [Dense](https://keras.io/api/layers/core_layers/dense/) layer to build this simple network as shown below."
       ]
     },
     {
@@ -228,7 +234,8 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.4"
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
